2006-02-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/adpcmds.c:  Replaced references to Ns_DStringTrunc
	* nsd/adpeval.c:  and Tcl_DStringTrunc with Ns_DStringSetLength
	* nsd/adpparse.c: and Tcl_DStringSetLength.
	* nsd/adprequest.c:
	* nsd/connio.c:
	* nsd/driver.c:
	* nsd/dstring.c:
	* nsd/fastpath.c:
	* nsd/form.c:
	* nsd/pathname.c:
	* nsd/request.c:
	* nsd/return.c:
	* nsd/server.c:
	* nsd/tclcallbacks.c:
	* nsd/tclhttp.c:
	* nsd/tclobjv.c:
	* nsd/url2file.c:
	* nsd/urlopen.c:

	* nsd/log.c: Fixed potential freeing of already 
	freed memory during LogFlush/LogFreeCache sequence.

2006-02-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd/tclcmds.c:
	* nsd/nsd.h: Updated writer support, Tcl command renamed to
	ns_writer with options submit, submitfile, list

2006-02-15  Vlad Seryakov  <seryakov@users.sf.net>

	src/driver.c:
	src/nsd.h: Added maxqueuesize parameter to limit incoming 
	sockets queue size to prevent possible DoS attacks, 
	default size set to 256. 
	include/ns.h: Made struct sockaddr_in sa public in
	Ns_Sock and Sock in private nsd.h to have access to it
	from communication modules without using private nsd.h 

	src/driver.c:
	nsd/nsd.h:
	nsd/tclcmds.c: Added ns_queue_writer Tcl command that submits
	Tcl_Obj to the writer thread. Writer thread will send this Tcl 
	object to the client.

2006-02-13  Ibrahim Tannir  <itannir@users.sf.net>
	* nsd/nswin32.c: fixed assigning the stdin, stdout, stderr channels
	  in order for Tcl to attach them properly when a new thread/interp
	  is created.
	
2006-02-08  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* configure.in:
	* m4/tcl.m4: added TEA 3.5. Scrapped testing for 
	MACOSX_DEPLOYMENT_TARGET.
	* nsd/cache.c: Implemented RFE #1427620
	* tests/test.nscfg: Set cachetimeout to 360 secs
	* tests/ns_cache.test: Reduced number of threads
	testing cache stability from 100 to 16 as it was
	blowing up smaller machines
	* doc/src/man.macros: new file